--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <img id="logo" alt="Logo">
   <h1>✏️ CryptoCard Generator</h1>
+  <main>
   <form>
     <fieldset>
       <legend>Mögliche Zeichen für Passwörter in der CryptoCard:</legend>
