--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cryptocard v1.2.0</title>
+  <title>Cryptocard v1.2.1</title>
   <link id="favicon" rel="icon" type="image/x-icon">
   <link rel="stylesheet" href="./style.css" data-inline="true" />
   <meta name="description" content="CryptoCard – sichere Passwörter ohne Passwortmanager. Eine einzelne HTML-Datei, läuft offline im Browser.">
@@ -19,7 +19,7 @@
 </head>
 <body>
   <img id="logo" alt="Logo">
-  <h1 id="header">CryptoCard Generator v1.2.0</h1>
+  <h1 id="header">CryptoCard Generator v1.2.1</h1>
   <main>
   <form>
     <fieldset>
@@ -59,7 +59,7 @@
     <br>
     <fieldset>
       <button id="makeCryptoCard" type="button" class="tooltip" data-tooltip="Erzeugt eine neue CryptoCard">♻️ Neue CryptoCard</button>
-      <button id="exportButton" type="button" class="tooltip" data-tooltip="Erzeugt einen Export der CryptoCard in .csv Format.&#10;Kein ; als Passwortzeichen verwenden da dies als Trennzeichen in der .csv Tabelle verwendet wird." disabled>💾 Export (.cvs)</button>
+      <button id="exportButton" type="button" class="tooltip" data-tooltip="Erzeugt einen Export der CryptoCard in .csv Format.&#10;Kein ; als Passwortzeichen verwenden da dies als Trennzeichen in der .csv Tabelle verwendet wird." disabled>💾 Export (.csv)</button>
       <button id="printButton" type="button" disabled>🖨️ CryptoCard drucken</button>
     </fieldset>
   </form>
